@@ -3,7 +3,7 @@
     - tabs.each do |tab|
       %li
         = link_to(tab[:text], tab[:url], :class => tab[:active] ? "active" : "")
-= show_flash_if_any
+= show_flash
 %table{ :width => "100%", :height => "100%", :cellpadding => 0, :cellspacing => 0, :class => :tabbed }
   %tr
     %td{ :class => :sidebar, :id => :sidebar, :valign => :top }
