@@ -1,2 +1,2 @@
-= show_flash_if_any
+= show_flash(:sticky => true)
 .tabless= yield
