@@ -4,6 +4,11 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Thu, May 14, 2009
+---------------------------------------------------------------------
+- Started with LH #34 (Gracefully handle missing objects).
+- Replaced regular flash messages with non-sticky ones.
+
 Wed, May 13, 2009
 ---------------------------------------------------------------------
 - Implemented search for campaigns, opportunities, accounts, and contacts.
